--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <h1 id="tareas-iniciales">#<strong>Tareas iniciales</strong>#</h1>
-<h3 id="instalación-de-node.js"><strong>Instalación de node.js</strong></h3>
+<h2 id="instalación-de-node.js">###<strong>Instalación de node.js</strong>###</h2>
 <p>Se han aplicado una serie de comandos para la instalación de node.js</p>
 <p>-<em>sudo apt-get install nodejs</em></p>
-<p><img src="imagenes_tutorial/nodejs.png" alt="No puede encontrarse la imagen"></p>
+<p><img src="images/nodejs.png" alt="No puede encontrarse la imagen"></p>
 <p>-<em>sudo apt-get install npm</em>. Npm es el sistema de manejo de paquetes y gestión de módulos de node.js.</p>
-<p><img src="imagenes_tutorial/npm.png" alt="No puede encontrarse la imagen"></p>
+<p><img src="images/npm.png" alt="No puede encontrarse la imagen"></p>
+<h2 id="comprobación-de-que-npm-funciona-correctamente">&gt;####<strong>Comprobación de que npm funciona correctamente:</strong>####</h2>
 <blockquote>
-<h4><strong>Comprobación de que npm funciona correctamente:</strong></h4>
-</blockquote>
-<blockquote>
-<h4><img src="imagenes_tutorial/funcionamiento_npm1.png" title="Funcionamiento npm" alt="No puede encontrarse la imagen"></h4>
+<h4><img src="images/funcionamiento_npm1.png" title="Funcionamiento npm" alt="No puede encontrarse la imagen"></h4>
 </blockquote>
 <blockquote>
 <p>Este ejemplo lista los paquetes que actualmente están instalados en un determinado directorio en un formato de árbol:</p>
 </blockquote>
 <blockquote>
-<h4><img src="imagenes_tutorial/npm_paquetes.png" title="Funcionamiento npm" alt="No puede encontrarse la imagen"></h4>
+<h4><img src="images/npm_paquetes.png" title="Funcionamiento npm" alt="No puede encontrarse la imagen"></h4>
 </blockquote>
-<blockquote>
-<h4><strong>Instalación de express</strong></h4>
-</blockquote>
+<h2 id="instalación-de-express">&gt;####<strong>Instalación de express</strong>####</h2>
 <blockquote>
 <p>Se ha utilizado el siguiente comando para la instalación de express:</p>
 </blockquote>
@@ -27,23 +23,23 @@
 <p>-<em>npm install express --save</em></p>
 </blockquote>
 <blockquote>
-<h4><img src="imagenes_tutorial/express.png" alt="No puede encontrarse la imagen"></h4>
+<h4><img src="images/express.png" alt="No puede encontrarse la imagen"></h4>
 </blockquote>
-<h3 id="instalación-de-git"><strong>Instalación de git</strong></h3>
+<h2 id="instalación-de-git">###<strong>Instalación de git</strong>###</h2>
 <p>Para la instalación de git se han utilizado los siguientes comandos:</p>
 <p>-<em>sudo apt-get install git</em></p>
-<p><img src="Imagenes_tutorial/git.png" alt="No puede encontrarse la imagen" title="Instalacion git"></p>
-<h3 id="cloud-9"><strong>Cloud 9</strong></h3>
+<p><img src="images/git.png" alt="No puede encontrarse la imagen" title="Instalacion git"></p>
+<h2 id="cloud-9">###<strong>Cloud 9</strong>###</h2>
 <p>Cloud9 combina un potente editor de código online con un completo espacio de trabajo de Ubuntu en la nube. Soporta más de 40 lenguajes y es sencillo de manejar.</p>
-<p><img src="Imagenes_tutorial/c9.jpg" alt="No puede encontrarse la imagen" title="Instalacion git"></p>
-<h3 id="instalacion-de-atom"><strong>Instalacion de Atom</strong></h3>
+<p><img src="images/c9.jpg" alt="No puede encontrarse la imagen" title="Instalacion git"></p>
+<h2 id="instalacion-de-atom">###<strong>Instalacion de Atom</strong>###</h2>
 <p>Se ha hecho uso del siguiente comando para la instalación de Atom:</p>
 <p>-<em>sudo add-apt-repository ppa:webupd8team/atom</em>. La instalación es necesario realizarla mediante un PPA de webupd8team.</p>
-<p><img src="imagenes_tutorial/atom_prev.png" alt="No puede encontrarse la imagen"></p>
+<p><img src="images/atom_prev.png" alt="No puede encontrarse la imagen"></p>
 <p>Una vez actualizados los paquetes de Ubuntu para que éste reconozca aquellos que se hayan incorporado recientemente, ejecutamos el siguiente comando en la consola:</p>
 <p>-<em>sudo apt-get install atom</em>.</p>
-<p><img src="imagenes_tutorial/atom.png" alt="No puede encontrarse la imagen"></p>
-<h3 id="markdown"><strong>Markdown</strong></h3>
+<p><img src="images/atom.png" alt="No puede encontrarse la imagen"></p>
+<h2 id="markdown">###<strong>Markdown</strong>###</h2>
 <blockquote>
 <h4><strong>Sintaxis:</strong></h4>
 </blockquote>
@@ -62,9 +58,7 @@
 </blockquote>
 <blockquote>
 <h4><em>Referencias a links:</em></h4>
-<ul>
-<li><a href="https://example.com">Links</a></li>
-</ul>
+<p>*<a href="https://example.com">Links</a></p>
 </blockquote>
 <blockquote>
 <h4><em>Listas:</em></h4>
@@ -105,7 +99,7 @@
 </tbody>
 </table>
 </blockquote>
-<h3 id="referencias-utilizadas"><strong>Referencias utilizadas</strong></h3>
+<h2 id="referencias-utilizadas">###<strong>Referencias utilizadas</strong>###</h2>
 <p>Node js * <a href="https://nodejs.org/en/">Links</a></p>
 <p>Atom * <a href="https://atom.io/">Links</a></p>
 <p>Pandoc * <a href="http://pandoc.org/">Links</a></p>
