--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
-<h1 id="tareas-iniciales">#<strong>Tareas iniciales</strong>#</h1>
-<h2 id="instalación-de-node.js">###<strong>Instalación de node.js</strong>###</h2>
+<h1 id="tareas-iniciales"><strong>Tareas iniciales</strong></h1>
+<h2 id="instalación-de-node.js"><strong>Instalaci~ón de node.js</strong></h2>
 <p>Se han aplicado una serie de comandos para la instalación de node.js</p>
 <p>-<em>sudo apt-get install nodejs</em></p>
 <p><img src="images/nodejs.png" alt="No puede encontrarse la imagen"></p>
 <p>-<em>sudo apt-get install npm</em>. Npm es el sistema de manejo de paquetes y gestión de módulos de node.js.</p>
 <p><img src="images/npm.png" alt="No puede encontrarse la imagen"></p>
-<h2 id="comprobación-de-que-npm-funciona-correctamente">&gt;####<strong>Comprobación de que npm funciona correctamente:</strong>####</h2>
+<h2 id="comprobación-de-que-npm-funciona-correctamente">&gt;<strong>Comprobación de que npm funciona correctamente:</strong></h2>
 <blockquote>
-<h4><img src="images/funcionamiento_npm1.png" title="Funcionamiento npm" alt="No puede encontrarse la imagen"></h4>
+<p><img src="images/funcionamiento_npm1.png" title="Funcionamiento npm" alt="No puede encontrarse la imagen"></p>
 </blockquote>
 <blockquote>
 <p>Este ejemplo lista los paquetes que actualmente están instalados en un determinado directorio en un formato de árbol:</p>
 </blockquote>
 <blockquote>
-<h4><img src="images/npm_paquetes.png" title="Funcionamiento npm" alt="No puede encontrarse la imagen"></h4>
+<p><img src="images/npm_paquetes.png" title="Funcionamiento npm" alt="No puede encontrarse la imagen"></p>
 </blockquote>
-<h2 id="instalación-de-express">&gt;####<strong>Instalación de express</strong>####</h2>
+<h2 id="instalación-de-express">&gt;<strong>Instalación de express</strong></h2>
 <blockquote>
 <p>Se ha utilizado el siguiente comando para la instalación de express:</p>
 </blockquote>
@@ -23,83 +23,50 @@
 <p>-<em>npm install express --save</em></p>
 </blockquote>
 <blockquote>
-<h4><img src="images/express.png" alt="No puede encontrarse la imagen"></h4>
+<p><img src="images/express.png" alt="No puede encontrarse la imagen"></p>
 </blockquote>
-<h2 id="instalación-de-git">###<strong>Instalación de git</strong>###</h2>
+<h2 id="instalación-de-git"><strong>Instalación de git</strong></h2>
 <p>Para la instalación de git se han utilizado los siguientes comandos:</p>
 <p>-<em>sudo apt-get install git</em></p>
 <p><img src="images/git.png" alt="No puede encontrarse la imagen" title="Instalacion git"></p>
-<h2 id="cloud-9">###<strong>Cloud 9</strong>###</h2>
+<h2 id="cloud-9"><strong>Cloud 9</strong></h2>
 <p>Cloud9 combina un potente editor de código online con un completo espacio de trabajo de Ubuntu en la nube. Soporta más de 40 lenguajes y es sencillo de manejar.</p>
 <p><img src="images/c9.jpg" alt="No puede encontrarse la imagen" title="Instalacion git"></p>
-<h2 id="instalacion-de-atom">###<strong>Instalacion de Atom</strong>###</h2>
+<h2 id="instalacion-de-atom"><strong>Instalacion de Atom</strong></h2>
 <p>Se ha hecho uso del siguiente comando para la instalación de Atom:</p>
 <p>-<em>sudo add-apt-repository ppa:webupd8team/atom</em>. La instalación es necesario realizarla mediante un PPA de webupd8team.</p>
 <p><img src="images/atom_prev.png" alt="No puede encontrarse la imagen"></p>
 <p>Una vez actualizados los paquetes de Ubuntu para que éste reconozca aquellos que se hayan incorporado recientemente, ejecutamos el siguiente comando en la consola:</p>
 <p>-<em>sudo apt-get install atom</em>.</p>
 <p><img src="images/atom.png" alt="No puede encontrarse la imagen"></p>
-<h2 id="markdown">###<strong>Markdown</strong>###</h2>
+<h2 id="markdown"><strong>Markdown</strong></h2>
 <blockquote>
-<h4><strong>Sintaxis:</strong></h4>
+<p><strong>Sintaxis:</strong></p>
 </blockquote>
 <blockquote>
-<h4><em>Encabezados:</em></h4>
-<h1>H1</h1>
-<h2>H2</h2>
-<h3>H3</h3>
-<h4>H4</h4>
-<h5>H5</h5>
-<h6>H6</h6>
+<p><em>Encabezados:</em> H1 H2 H3 H4 H5 H6</p>
 </blockquote>
 <blockquote>
-<h4><em>Tipografía:</em></h4>
-<p><strong>Negrita</strong> <em>Cursiva</em> &gt; Citas <del>Scratch</del></p>
+<p><em>Tipografía:</em></p>
 </blockquote>
 <blockquote>
-<h4><em>Referencias a links:</em></h4>
-<p>*<a href="https://example.com">Links</a></p>
+<p><em>Enlaces:</em></p>
 </blockquote>
 <blockquote>
-<h4><em>Listas:</em></h4>
-<ol style="list-style-type: decimal">
-<li>Lista 1</li>
-<li>Lista 2</li>
-</ol>
-<ul>
-<li>Lista 1</li>
-<li>Lista 2</li>
-</ul>
+<p><em>Listas:</em></p>
 </blockquote>
 <blockquote>
-<h4><em>Imágenes:</em></h4>
-<p>[alt text][logo] <img src="url-imagen" alt="Texto imagen" /></p>
+<p><em>Imágenes:</em> [alt text][logo] <img src="url-imagen" alt="Texto imagen" /></p>
 </blockquote>
 <blockquote>
-<h2>####<em>Líneas horizontales:</em>####</h2>
+<h2><em>Líneas horizontales:</em></h2>
 <hr />
 <hr />
 </blockquote>
 <blockquote>
-<h4><em>Tablas:</em></h4>
-<table>
-<thead>
-<tr class="header">
-<th align="left">Tables</th>
-<th align="center">Are</th>
-<th align="right">Cool</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">col 3 is</td>
-<td align="center">right-aligned</td>
-<td align="right">$1600</td>
-</tr>
-</tbody>
-</table>
+<p><em>Tablas:</em> | Tables | Are | Cool | | ------------- |:-------------:| -----:| | col 3 is | right-aligned | $1600 |</p>
 </blockquote>
-<h2 id="referencias-utilizadas">###<strong>Referencias utilizadas</strong>###</h2>
+<h2 id="referencias-utilizadas"><strong>Referencias utilizadas</strong></h2>
 <p>Node js * <a href="https://nodejs.org/en/">Links</a></p>
 <p>Atom * <a href="https://atom.io/">Links</a></p>
 <p>Pandoc * <a href="http://pandoc.org/">Links</a></p>
