--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <h1 id="tareas-iniciales"><strong>Tareas iniciales</strong></h1>
-<h2 id="instalación-de-node.js"><strong>Instalaci~ón de node.js</strong></h2>
+<hr />
+<h2 id="instalación-de-node.js"><strong>Instalación de node.js</strong></h2>
 <p>Se han aplicado una serie de comandos para la instalación de node.js</p>
 <p>-<em>sudo apt-get install nodejs</em></p>
 <p><img src="images/nodejs.png" alt="No puede encontrarse la imagen"></p>
