Modificación tutorial.md

--- a/index.html
+++ b/index.html
@@ -1,76 +1,186 @@
 <h1 id="tareas-iniciales"><strong>Tareas iniciales</strong></h1>
 <hr />
-<h2 id="instalación-de-node.js"><strong>Instalación de node.js</strong></h2>
-<p>Se han aplicado una serie de comandos para la instalación de node.js</p>
+<h2 id="instalacion-de-node.js"><strong>Instalacion de node.js</strong></h2>
+<p>Se han aplicado una serie de comandos para la instalacion de node.js</p>
 <p>-<em>sudo apt-get install nodejs</em></p>
-<p><img src="images/nodejs.png" alt="No puede encontrarse la imagen"></p>
-<p>-<em>sudo apt-get install npm</em>. Npm es el sistema de manejo de paquetes y gestión de módulos de node.js.</p>
-<p><img src="images/npm.png" alt="No puede encontrarse la imagen"></p>
-<h2 id="comprobación-de-que-npm-funciona-correctamente">&gt;<strong>Comprobación de que npm funciona correctamente:</strong></h2>
 <blockquote>
-<p><img src="images/funcionamiento_npm1.png" title="Funcionamiento npm" alt="No puede encontrarse la imagen"></p>
+<blockquote>
+<div class="figure">
+<img src="images/nodejs.png" />
+</div>
+</blockquote>
+</blockquote>
+<p>-<em>sudo apt-get install npm</em>. Npm es el sistema de manejo de paquetes y gestion de modulos de node.js.</p>
+<blockquote>
+<blockquote>
+<div class="figure">
+<img src="images/npm.png" />
+</div>
+</blockquote>
+</blockquote>
+<ul>
+<li><h3>Comprobacion de que npm funciona correctamente:</h3></li>
+</ul>
+<blockquote>
+<blockquote>
+<div class="figure">
+<img src="images/funcionamiento_npm1.png" />
+</div>
+</blockquote>
 </blockquote>
 <blockquote>
-<p>Este ejemplo lista los paquetes que actualmente están instalados en un determinado directorio en un formato de árbol:</p>
+<p>Este ejemplo lista los paquetes que actualmente estan instalados en un determinado directorio en un formato de arbol:</p>
 </blockquote>
 <blockquote>
-<p><img src="images/npm_paquetes.png" title="Funcionamiento npm" alt="No puede encontrarse la imagen"></p>
-</blockquote>
-<h2 id="instalación-de-express">&gt;<strong>Instalación de express</strong></h2>
 <blockquote>
-<p>Se ha utilizado el siguiente comando para la instalación de express:</p>
+<div class="figure">
+<img src="images/npm_paquetes.png" />
+</div>
+</blockquote>
+</blockquote>
+<ul>
+<li><h3>Instalacion de express</h3></li>
+</ul>
+<blockquote>
+<p>Se ha utilizado el siguiente comando para la instalacion de express:</p>
 </blockquote>
 <blockquote>
 <p>-<em>npm install express --save</em></p>
 </blockquote>
 <blockquote>
-<p><img src="images/express.png" alt="No puede encontrarse la imagen"></p>
+<blockquote>
+<div class="figure">
+<img src="images/express.png" />
+</div>
 </blockquote>
-<h2 id="instalación-de-git"><strong>Instalación de git</strong></h2>
-<p>Para la instalación de git se han utilizado los siguientes comandos:</p>
+</blockquote>
+<h2 id="instalacion-de-git"><strong>Instalacion de git</strong></h2>
+<p>Para la instalacion de git se han utilizado los siguientes comandos:</p>
 <p>-<em>sudo apt-get install git</em></p>
-<p><img src="images/git.png" alt="No puede encontrarse la imagen" title="Instalacion git"></p>
+<blockquote>
+<blockquote>
+<div class="figure">
+<img src="images/git.png" />
+</div>
+</blockquote>
+</blockquote>
 <h2 id="cloud-9"><strong>Cloud 9</strong></h2>
-<p>Cloud9 combina un potente editor de código online con un completo espacio de trabajo de Ubuntu en la nube. Soporta más de 40 lenguajes y es sencillo de manejar.</p>
-<p><img src="images/c9.jpg" alt="No puede encontrarse la imagen" title="Instalacion git"></p>
+<p>Cloud9 combina un potente editor de codigo online con un completo espacio de trabajo de Ubuntu en la nube. Soporta mas de 40 lenguajes y es sencillo de manejar.</p>
+<blockquote>
+<blockquote>
+<div class="figure">
+<img src="images/c9.jpg" />
+</div>
+</blockquote>
+</blockquote>
 <h2 id="instalacion-de-atom"><strong>Instalacion de Atom</strong></h2>
-<p>Se ha hecho uso del siguiente comando para la instalación de Atom:</p>
-<p>-<em>sudo add-apt-repository ppa:webupd8team/atom</em>. La instalación es necesario realizarla mediante un PPA de webupd8team.</p>
-<p><img src="images/atom_prev.png" alt="No puede encontrarse la imagen"></p>
-<p>Una vez actualizados los paquetes de Ubuntu para que éste reconozca aquellos que se hayan incorporado recientemente, ejecutamos el siguiente comando en la consola:</p>
+<p>Se ha hecho uso del siguiente comando para la instalacion de Atom:</p>
+<p>-<em>sudo add-apt-repository ppa:webupd8team/atom</em>. La instalacion es necesario realizarla mediante un PPA de webupd8team.</p>
+<blockquote>
+<blockquote>
+<div class="figure">
+<img src="images/atom_prev.png" />
+</div>
+</blockquote>
+</blockquote>
+<p>Una vez actualizados los paquetes de Ubuntu para que este reconozca aquellos que se hayan incorporado recientemente, ejecutamos el siguiente comando en la consola:</p>
 <p>-<em>sudo apt-get install atom</em>.</p>
-<p><img src="images/atom.png" alt="No puede encontrarse la imagen"></p>
+<blockquote>
+<blockquote>
+<div class="figure">
+<img src="images/atom.png" />
+</div>
+</blockquote>
+</blockquote>
+<blockquote>
+<blockquote>
+<div class="figure">
+<img src="images/atom1.png" />
+</div>
+</blockquote>
+</blockquote>
 <h2 id="markdown"><strong>Markdown</strong></h2>
 <blockquote>
 <p><strong>Sintaxis:</strong></p>
 </blockquote>
 <blockquote>
-<p><em>Encabezados:</em> H1 H2 H3 H4 H5 H6</p>
+<ul>
+<li><em>Encabezados:</em></li>
+</ul>
 </blockquote>
 <blockquote>
-<p><em>Tipografía:</em></p>
+<blockquote>
+<div class="figure">
+<img src="images/cabecera.png" />
+</div>
+</blockquote>
 </blockquote>
 <blockquote>
-<p><em>Enlaces:</em></p>
+<ul>
+<li><em>Tipografia:</em></li>
+</ul>
 </blockquote>
 <blockquote>
-<p><em>Listas:</em></p>
+<blockquote>
+<div class="figure">
+<img src="images/sintaxis.png" />
+</div>
+</blockquote>
 </blockquote>
 <blockquote>
-<p><em>Imágenes:</em> [alt text][logo] <img src="url-imagen" alt="Texto imagen" /></p>
+<ul>
+<li><em>Enlaces:</em></li>
+</ul>
 </blockquote>
 <blockquote>
-<h2><em>Líneas horizontales:</em></h2>
-<hr />
-<hr />
+<blockquote>
+<div class="figure">
+<img src="images/enlaces.png" />
+</div>
+</blockquote>
 </blockquote>
 <blockquote>
-<p><em>Tablas:</em> | Tables | Are | Cool | | ------------- |:-------------:| -----:| | col 3 is | right-aligned | $1600 |</p>
+<ul>
+<li><em>Listas:</em></li>
+</ul>
+</blockquote>
+<blockquote>
+<blockquote>
+<div class="figure">
+<img src="images/listas.png" />
+</div>
+</blockquote>
+</blockquote>
+<blockquote>
+<ul>
+<li><em>Imagenes:</em></li>
+</ul>
+</blockquote>
+<blockquote>
+<blockquote>
+<div class="figure">
+<img src="images/imagenes.png" />
+</div>
+</blockquote>
+</blockquote>
+<blockquote>
+<ul>
+<li><em>Tablas:</em></li>
+</ul>
+</blockquote>
+<blockquote>
+<blockquote>
+<div class="figure">
+<img src="images/tablas.png" />
+</div>
+</blockquote>
 </blockquote>
 <h2 id="referencias-utilizadas"><strong>Referencias utilizadas</strong></h2>
-<p>Node js * <a href="https://nodejs.org/en/">Links</a></p>
-<p>Atom * <a href="https://atom.io/">Links</a></p>
-<p>Pandoc * <a href="http://pandoc.org/">Links</a></p>
-<p>GitHub Pages * <a href="https://pages.github.com/">Links</a></p>
-<p>Markdown * <a href="">Links</a></p>
-<p>Cloud 9 * <a href="https://c9.io/">Links</a></p>
+<ul>
+<li><p><a href="https://nodejs.org/en/">Node js</a></p></li>
+<li><p><a href="https://atom.io/">Atom</a></p></li>
+<li><p><a href="http://pandoc.org/">Pandoc</a></p></li>
+<li><p><a href="https://pages.github.com/">GitHub Pages</a></p></li>
+<li><p><a href="https://joedicastro.com/pages/markdown.html">Markdown</a></p></li>
+<li><p><a href="https://c9.io/">Cloud 9</a></p></li>
+</ul>
