Modificaciones en el index. Añadiendo enlaces y descripción.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <h1 id="tareas-iniciales"><strong>Tareas iniciales</strong></h1>
 <hr />
+<p>Practica 1 para la asignatura "Desarrollo de Sistemas Informaticos" en la cual se despliega un tutorial acerca de Markdown y tambien la instalacion de distintas herramientas de trabajo: NodeJS, Express, Atom, c9, pandoc... </p>
+<h2 id="referencias-utilizadas"><strong>Enlaces de interes: </strong></h2>
+<ul>
+<li><p><a href="https://github.com/ULL-ESIT-GRADOII-DSI/tareas-iniciales-josue-nayra-dsi15-16">Repositorio tutorial </a></p></li>
+<li><p><a href="https://campusvirtual.ull.es/1516/course/view.php?id=144">Campus virtual asignatura "Desarrollo de Sistemas Informaticos"</a></p></li>
+<li><p><a href="http://josuetc94.github.io/">Pagina personal Josue Toledo Castro</a></p></li>
+<li><p><a href="http://alu0100406122.github.io/">Pagina personal Maria Nayra Rodriguez Perez</a></p></li>
+</ul>
+<br>
+<hr />
 <h2 id="instalacion-de-node.js"><strong>Instalacion de node.js</strong></h2>
 <p>Se han aplicado una serie de comandos para la instalacion de node.js</p>
 <p>-<em>sudo apt-get install nodejs</em></p>
